# rusty-stream

./: Cargo.toml  README.md  docker-compose.yml
api_service/: Cargo.toml  Dockerfile
api_service/src/: main.rs
data_producer/: Cargo.toml  Dockerfile
data_producer/src/: main.rs
streaming_service/: Cargo.toml  Dockerfile
streaming_service/src/: main.rs
