[workspace]
members = ["api_service", "data_producer", "streaming_service"]
resolver = "2"

default-members = ["api_service", "data_producer", "streaming_service"]

[profile.release]
debug = true

[workspace.dependencies]
tokio = { version = "1.28", features = ["macros"] }
rdkafka = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
redis = "0.28.2"
chrono = "0.4"
sqlx = "0.8.3"
