[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }

axum = "0.8.1"
tower = "0.5.2"
axum-server = "0.7.1"
