[package]
name = "streaming_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
